Updated for SA:MP 0.3z R2 and removed AddRecallBuffer

--- a/bin/mod_sa/mod_sa.ini
+++ b/bin/mod_sa/mod_sa.ini
@@ -1,9 +1,10 @@
 #	PROJECT:		mod_sa
 #	LICENSE:		See LICENSE in the top level directory
-#	COPYRIGHT:		Copyright 2007-2012 we_sux
+#	COPYRIGHT:		Copyright 2007-2014 we_sux
 #
 #	updated for SA:MP 0.3x by FYP
 #	updated for SA:MP 0.3z by Pushok, iMaddy, povargek
+#	updated for SA:MP 0.3z-R2 by povargek
 #
 #	mod_sa is available from http://code.google.com/p/m0d-s0beit-sa/
 #
@@ -27,6 +28,7 @@
 # 
 # mod_sa (full updated for 0.3x by FYP)
 # mod_sa (full updated for 0.3z by Pushok, iMaddy, povargek)
+# mod_sa (full updated for 0.3z-R2 by povargek)
 # by jflm, nuckfuts, notaplane, FYP, Pushok, iMaddy, povargek and the game modification community
 # http://code.google.com/p/mod-s0beit-sa/
 # 
@@ -1379,119 +1381,7 @@ patch[] = "Custom carcols.dat (data/carcols.two)"			&0 0 "" 0x00869731 "444154" 
 # ========================
 #
 # Format: name hotkey enable { address original_data replace_data }
-# SA:MP Patches updated by CM Team
-
-sampPatch[] = "Keep GTA Hud turned on"   &0 1 0x65408 "" "9090" 
-sampPatch[] = "No connecting delay"    &0 1 0x2AE035 "" "0000" 
-
-# Data Getting Sent 
-sampPatch[] = "Disable incar data"     &0 0 0x6140 "" "C3" 
-sampPatch[] = "Disable aiming data"    &0 0 0x4670 "" "C3" 
-sampPatch[] = "Disable money data" &0 0 0x4FA0 "" "C3" 
-sampPatch[] = "Disable onfoot data"    &0 0 0x41E0 "" "C3" 
-sampPatch[] = "Disable passenger data"    &0 0 0x4830 "" "C3" 
-#sampPatch[] = "Disable unoccupied data"   &0 0 0x5E00 "" "C20800" 
-#sampPatch[] = "Disable weapon data"    &0 0 0x5660 "" "C3" 
-sampPatch[] = "Disable spec data"    &0 0 0x5750 "" "C390" 
-
-##Generic 
-sampPatch[] = "NOP SetWeather"     &0 0 0xB2C0  "" "C390" 
-sampPatch[] = "NOP SetGravity"     &0 0 0x15940  "" "C390" 
-sampPatch[] = "NOP SetWorldTime"    &0 0 0xB1D0 "" "C390" 
-sampPatch[] = "NOP SetPlayerTime"    &0 0 0xB5A0 "" "C390" 
-sampPatch[] = "NOP PlayCrimeReportForPlayer"    &0 0 0x13D40  "" "C390" 
-sampPatch[] = "NOP PlaySoundForPlayer"   &0 0 0x14FA0  "" "C390" 
-sampPatch[] = "NOP CreateExplosion"    &0 0 0x16960 "" "C390" 
-sampPatch[] = "NOP SetPlayerRaceCheckpoint"  &0 0 0xC400  "" "C390" 
-sampPatch[] = "NOP SetPlayerWantedLevel"  &0 0 0x17810 "" "C390" 
-sampPatch[] = "NOP EnableStuntBonus"   &0 0 0x12B20  "" "C390" 
-sampPatch[] = "NOP PlayAudioStream"    &0 0 0x17EE0 "" "C390" 
-sampPatch[] = "NOP StopAudioStream"    &0 0 0x12E60 "" "C390" 
-#sampPatch[] = "NOP RemoveBuilding"    &0 0 0x17BB0 "" "C390" 
-
-##Player Specific 
-sampPatch[] = "NOP ResetPlayerMoney"   &0 0 0x12E00  "" "C390" 
-sampPatch[] = "NOP GivePlayerMoney"    &0 0 0x152B0  "" "C390" 
-sampPatch[] = "NOP ResetPlayerWeapons"   &0 0 0x12E10   "" "C390" 
-sampPatch[] = "NOP GivePlayerWeapon"   &0 0 0x14E20 "" "C390" 
-sampPatch[] = "NOP SetPlayerAmmo"    &0 0 0x153F0 "" "C390" 
-sampPatch[] = "NOP SetPlayerArmedWeapon"  &0 0 0x13B50 "" "C390" 
-sampPatch[] = "NOP SetPlayerCameraLookAt"  &0 0 0x147F0  "" "C390" 
-sampPatch[] = "NOP SetPlayerCameraPos"   &0 0 0x14720  "" "C390" 
-sampPatch[] = "NOP SetCameraBehindPlayer"  &0 0 0x12DF0  "" "C390" 
-sampPatch[] = "NOP SetPlayerWorldBounds"  &0 0 0x15080  "" "C390" 
-sampPatch[] = "NOP SetPlayerShopName"   &0 0 0x12BC0  "" "C390" 
-sampPatch[] = "NOP InterpolateCamera"    &0 0 0x14D60 "" "C390" 
-
-##Player Actor 
-sampPatch[] = "NOP TogglePlayerControllable"    &0 0 0x14F00  "" "C390" 
-sampPatch[] = "NOP SetPlayerInterior"   &0 0 0x14680  "" "C390" 
-sampPatch[] = "NOP SetPlayerPos"    &0 0 0x13FA0 "" "C390" 
-sampPatch[] = "NOP SetPlayerDrunkLevel"   &0 0 0x13AB0 "" "C390" 
-sampPatch[] = "NOP SetPlayerFacingAngle"  &0 0 0x15210  "" "C390" 
-sampPatch[] = "NOP SetPlayerAnimation"    &0 0 0x155C0  "" "C390" 
-sampPatch[] = "NOP ClearPlayerAnimation"   &0 0 0x13290  "" "C390" 
-sampPatch[] = "NOP SetPlayerSpecialAction"  &0 0 0x133A0 "" "C390" 
-sampPatch[] = "NOP SetPlayerHealth"    &0 0 0x141D0 "" "C390" 
-sampPatch[] = "NOP SetPlayerArmor"    &0 0 0x157D0 "" "C390" 
-sampPatch[] = "NOP SetPlayerVelocity"   &0 0 0x13550 "" "C390" 
-sampPatch[] = "NOP TogglePlayerSpectating"  &0 0 0x16EE0 "" "C390" 
-sampPatch[] = "NOP PlayerSpectatePlayer"  &0 0 0x16F90 "" "C390" 
-sampPatch[] = "NOP PlayerSpectateVehicle"  &0 0 0x17070 "" "C390" 
-sampPatch[] = "NOP SetPlayerFightingStyle"  &0 0 0x13450 "" "C390" 
-sampPatch[] = "NOP SetPlayerSkillLevel"   &0 0 0xB760 "" "C390" 
-sampPatch[] = "NOP SetPlayerSkin"    &0 0 0x13E80 "" "C390" 
-
-##Player Vehicle 
-sampPatch[] = "NOP SetVehiclePosition"   &0 0 0x148F0  "" "C390" 
-sampPatch[] = "NOP SetVehicleVelocity"   &0 0 0x13650 "" "C390" 
-sampPatch[] = "NOP SetVehicleHealth"   &0 0 0x159E0 "" "C390" 
-sampPatch[] = "NOP PutPlayerInVehicle"   &0 0 0x14280  "" "C390" 
-sampPatch[] = "NOP RemovePlayerFromVehicle"  &0 0 0x12D60  "" "C390" 
-sampPatch[] = "NOP AddCarComponent"    &0 0 0xB400 "" "C390" 
-sampPatch[] = "NOP RemoveCarComponents"   &0 0 0x17150 "" "C390" 
-sampPatch[] = "NOP UpdateVehicleDamageStatus" &0 0 0xB410 "" "C390" 
-sampPatch[] = "NOP AttachTrailer"    &0 0 0x15AC0 "" "C390" 
-sampPatch[] = "NOP DetachTrailer"    &0 0 0x15C00 "" "C390" 
-#sampPatch[] = "NOP SetEngineState"    &0 0 0x78560 "" "C20400" 
-sampPatch[] = "NOP SetVehicleParams"   &0 0 0x14AD0 "" "C390"    
-sampPatch[] = "NOP SetVehicleParamsEx"   &0 0 0xD440 "" "C390"    
-sampPatch[] = "NOP SetVehicleInterior"   &0 0 0x14BA0 "" "C390"    
-sampPatch[] = "NOP SetVehicleZAngle"    &0 0 0x14A00 "" "C390"    
-
-##Objects 
-sampPatch[] = "NOP CreateObject"    &0 0 0x15FB0 "" "C390" 
-sampPatch[] = "NOP SetObjectPos"    &0 0 0x16660 "" "C390" 
-sampPatch[] = "NOP SetObjectRot"    &0 0 0x16770 "" "C390" 
-sampPatch[] = "NOP MoveObject"     &0 0 0x16B50 "" "C390" 
-sampPatch[] = "NOP StopObject"     &0 0 0x16D00 "" "C390" 
-sampPatch[] = "NOP DestroyObject"    &0 0 0x16870 "" "C390" 
-sampPatch[] = "NOP Attach Object To Player"  &0 0 0x17230 "" "C390" 
-sampPatch[] = "NOP AttachCameraToObject"  &0 0 0x14C60 "" "C390" 
-sampPatch[] = "NOP EditObject"     &0 0 0xD8D0 "" "C390" 
-
-##Anything Text Related 
-sampPatch[] = "NOP ShowGameText"    &0 0 0x14570 "" "C390" 
-sampPatch[] = "NOP ShowTextDraw"    &0 0 0x178B0 "" "C390" 
-sampPatch[] = "NOP HideTextDraw"    &0 0 0x179E0 "" "C390" 
-sampPatch[] = "NOP ShowMenu"     &0 0 0x176B0 "" "C390" 
-sampPatch[] = "NOP HideMenu"     &0 0 0x17760 "" "C390" 
-sampPatch[] = "NOP SetPlayerChatBubble"   &0 0 0xBB00  "" "C390" 
-sampPatch[] = "NOP ShowPlayerDialog" &0 1 0xBC70 "" "C390"  
-sampPatch[] = "Mute Player Chat"    &0 0 0xDDA0 "" "C390" 
-sampPatch[] = "Mute Server Chat"    &0 0 0xB110 "" "C390" 
-
-##Generic Other 
-sampPatch[] = "Disable take damage data" &0 0 0x5AA0 "" "C21000" 
-sampPatch[] = "Disable give damage data" &0 0 0x5BB0 "" "C21000" 
-#sampPatch[] = "NOP AddDeathMessage"    &0 0 0x17DD0 "" "C390" 
-#sampPatch[] = "NOP ForceClassSelection"   &0 0 0xAFD0 "" "C390" 
-sampPatch[] = "NOP SendDeath"     &0 0 0x4A90 "" "C390" 
-sampPatch[] = "NOP SpawnPlayer"     &0 0 0x36D0 "" "C390" 
-sampPatch[] = "Debug mode" &0 0 0x2120E8 "" "01000000"           
-sampPatch[] = "Disable (dl) distance limit"  &0 0 0xCE7CC "" "0000FF4F" 
-sampPatch[] = "NOP RestartGame" &0 0 0x9280 "" "C390"   
-
+# SA:MP Patches
 
 
 # ====================
