Updated NOP's for 0.3z R2, big thanks to FYP

--- a/bin/mod_sa/mod_sa.ini
+++ b/bin/mod_sa/mod_sa.ini
@@ -1382,7 +1382,134 @@ patch[] = "Custom carcols.dat (data/carcols.two)"			&0 0 "" 0x00869731 "444154" 
 #
 # Format: name hotkey enable { address original_data replace_data }
 # SA:MP Patches
-
+#by povargek
+#|
+#V
+sampPatch[] = "Keep GTA Hud turned on"   &0 1 0x99778 "" "9090" 
+sampPatch[] = "No connecting delay" &0 1 0x77A3 "" "0000"
+sampPatch[] = "Disable incar data"     &0 0 0x60D0 "" "C3" 
+sampPatch[] = "Disable onfoot data" &0 0 0x4180 "" "C3" 
+sampPatch[] = "Disable aiming data" &0 0 0x4600 "" "C3"                          
+sampPatch[] = "Disable passenger data" &0 0 0x47C0 "" "C3" 
+sampPatch[] = "Disable unoccupied data" &0 0 0x5E60 "" "C20800"
+sampPatch[] = "Disable spec data"  &0 0 0x56E0 "" "C390" 
+sampPatch[] = "Disable weapon data" &0 0 0x54C0 "" "C3"   
+#by FYP 
+#|
+#V
+sampPatch[] = "NOP SetPlayerName"     &0 0 0x18420 "" "C390"  
+sampPatch[] = "NOP SetPlayerPos"     &0 0 0x13EF0 "" "C390"  
+sampPatch[] = "NOP SetPlayerPosFindZ"     &0 0 0x14010 "" "C390"  
+sampPatch[] = "NOP SetPlayerHealth"     &0 0 0x14120 "" "C390"  
+sampPatch[] = "NOP TogglePlayerControllable"     &0 0 0x14E50 "" "C390"  
+sampPatch[] = "NOP PlaySound"     &0 0 0x14EF0 "" "C390"  
+sampPatch[] = "NOP SetPlayerWorldBounds"     &0 0 0x14FD0 "" "C390"  
+sampPatch[] = "NOP GivePlayerMoney"     &0 0 0x150C0 "" "C390"  
+sampPatch[] = "NOP SetPlayerFacingAngle"     &0 0 0x15160 "" "C390"  
+sampPatch[] = "NOP ResetPlayerMoney"     &0 0 0x12D50 "" "C390"  
+sampPatch[] = "NOP ResetPlayerWeapons"     &0 0 0x12D60 "" "C390"  
+sampPatch[] = "NOP GivePlayerWeapon"     &0 0 0x15200 "" "C390"  
+sampPatch[] = "NOP SetVehicleParamsEx"     &0 0 0xD390 "" "C390"  
+sampPatch[] = "NOP EnterVehicle"     &0 0 0xD550 "" "C390"  
+sampPatch[] = "NOP EnterEditObject"     &0 0 0xAC10 "" "C390"  
+sampPatch[] = "NOP CancelEdit"     &0 0 0xACD0 "" "C390"  
+sampPatch[] = "NOP SetPlayerTime"     &0 0 0xB4F0 "" "C390"  
+sampPatch[] = "NOP ToggleClock"     &0 0 0xB5D0 "" "C390"  
+sampPatch[] = "NOP SetPlayerShopName"     &0 0 0x12B10 "" "C390"  
+sampPatch[] = "NOP SetPlayerSkillLevel"     &0 0 0xB6B0 "" "C390"  
+sampPatch[] = "NOP SetPlayerDrunkLevel"     &0 0 0x13A00 "" "C390"  
+sampPatch[] = "NOP Create3DTextLabel"     &0 0 0xB7E0 "" "C390"  
+sampPatch[] = "NOP DisableCheckpoint"     &0 0 0xA920 "" "C390"  
+sampPatch[] = "NOP SetRaceCheckpoint"     &0 0 0xC350 "" "C390"  
+sampPatch[] = "NOP DisableRaceCheckpoint"     &0 0 0xA930 "" "C390"  
+sampPatch[] = "NOP PlayAudioStream"     &0 0 0x17E30 "" "C390"  
+sampPatch[] = "NOP StopAudioStream"     &0 0 0x12DB0 "" "C390"  
+sampPatch[] = "NOP RemoveBuildingForPlayer"     &0 0 0x17FA0 "" "C390"  
+sampPatch[] = "NOP CreateObject"     &0 0 0x15F00 "" "C390"  
+sampPatch[] = "NOP SetObjectPos"     &0 0 0x165B0 "" "C390"  
+sampPatch[] = "NOP SetObjectRot"     &0 0 0x166C0 "" "C390"  
+sampPatch[] = "NOP DestroyObject"     &0 0 0x167C0 "" "C390"  
+sampPatch[] = "NOP DeathMessage"     &0 0 0x181C0 "" "C390"  
+sampPatch[] = "NOP SetPlayerMapIcon"     &0 0 0x15350 "" "C390"  
+sampPatch[] = "NOP RemoveVehicleComponent"     &0 0 0x170A0 "" "C390"  
+sampPatch[] = "NOP Update3DTextLabel"     &0 0 0xB990 "" "C390"  
+sampPatch[] = "NOP ChatBubble"     &0 0 0xBA50 "" "C390"  
+sampPatch[] = "NOP ShowDialog"     &0 0 0xBBC0 "" "C390"  
+sampPatch[] = "NOP DestroyPickup"     &0 0 0xB210 "" "C390"  
+sampPatch[] = "NOP LinkVehicleToInterior"     &0 0 0x14AF0 "" "C390"  
+sampPatch[] = "NOP SetPlayerArmour"     &0 0 0x15720 "" "C390"  
+sampPatch[] = "NOP SetPlayerArmedWeapon"     &0 0 0x13AA0 "" "C390"  
+sampPatch[] = "NOP SetSpawnInfo"     &0 0 0x12C10 "" "C390"  
+sampPatch[] = "NOP SetPlayerTeam"     &0 0 0x142E0 "" "C390"  
+sampPatch[] = "NOP PutPlayerInVehicle"     &0 0 0x141D0 "" "C390"  
+sampPatch[] = "NOP RemovePlayerFromVehicle"     &0 0 0x12CB0 "" "C390"  
+sampPatch[] = "NOP SetPlayerColor"     &0 0 0x143D0 "" "C390"  
+sampPatch[] = "NOP DisplayGameText"     &0 0 0x144C0 "" "C390"  
+sampPatch[] = "NOP ForceClassSelection"     &0 0 0x12D90 "" "C390"  
+sampPatch[] = "NOP AttachObjectToPlayer"     &0 0 0x17180 "" "C390"  
+sampPatch[] = "NOP InitMenu"     &0 0 0x17340 "" "C390"  
+sampPatch[] = "NOP ShowMenu"     &0 0 0x17600 "" "C390"  
+sampPatch[] = "NOP HideMenu"     &0 0 0x176B0 "" "C390"  
+sampPatch[] = "NOP CreateExplosion"     &0 0 0x168B0 "" "C390"  
+sampPatch[] = "NOP ShowPlayerNameTagForPlayer"     &0 0 0x169C0 "" "C390"  
+sampPatch[] = "NOP AttachCameraToObject"     &0 0 0x14BB0 "" "C390"  
+sampPatch[] = "NOP InterpolateCamera"     &0 0 0x14CB0 "" "C390"  
+sampPatch[] = "NOP ClickTextDraw"     &0 0 0x180C0 "" "C390"  
+sampPatch[] = "NOP SetObjectMaterial"     &0 0 0x16240 "" "C390"  
+sampPatch[] = "NOP GangZoneStopFlash"     &0 0 0x17D80 "" "C390"  
+sampPatch[] = "NOP ApplyAnimation"     &0 0 0x15510 "" "C390"  
+sampPatch[] = "NOP ClearAnimations"     &0 0 0x131E0 "" "C390"  
+sampPatch[] = "NOP SetPlayerSpecialAction"     &0 0 0x132F0 "" "C390"  
+sampPatch[] = "NOP SetPlayerFightingStyle"     &0 0 0x133A0 "" "C390"  
+sampPatch[] = "NOP SetPlayerVelocity"     &0 0 0x134A0 "" "C390"  
+sampPatch[] = "NOP SetVehicleVelocity"     &0 0 0x135A0 "" "C390"  
+sampPatch[] = "NOP ClientMessage"     &0 0 0xB060 "" "C390"  
+sampPatch[] = "NOP SetWorldTime"     &0 0 0xAFC0 "" "C390"  
+sampPatch[] = "NOP CreatePickup"     &0 0 0xB150 "" "C390"  
+sampPatch[] = "NOP ScmEvent"     &0 0 0xB350 "" "C390"  
+sampPatch[] = "NOP MoveObject"     &0 0 0x16AA0 "" "C390"  
+sampPatch[] = "NOP Chat"     &0 0 0xDCF0 "" "C390"  
+sampPatch[] = "NOP SrvNetStats"     &0 0 0xA940 "" "C390"  
+sampPatch[] = "NOP EnableStuntBonusForPlayer"     &0 0 0x12A70 "" "C390"  
+sampPatch[] = "NOP TextDrawSetString"     &0 0 0x179E0 "" "C390"  
+sampPatch[] = "NOP DamageVehicle"     &0 0 0xD270 "" "C390"  
+sampPatch[] = "NOP SetCheckpoint"     &0 0 0xC240 "" "C390"  
+sampPatch[] = "NOP GangZoneCreate"     &0 0 0x17AF0 "" "C390"  
+sampPatch[] = "NOP PlayCrimeReport"     &0 0 0x13C90 "" "C390"  
+sampPatch[] = "NOP SetPlayerAttachedObject"     &0 0 0x13B50 "" "C390"  
+sampPatch[] = "NOP EditAttachedObject"     &0 0 0xD760 "" "C390"  
+sampPatch[] = "NOP EditObject"     &0 0 0xD820 "" "C390"  
+sampPatch[] = "NOP GangZoneDestroy"     &0 0 0x17C10 "" "C390"  
+sampPatch[] = "NOP GangZoneFlash"     &0 0 0x17CC0 "" "C390"  
+sampPatch[] = "NOP StopObject"     &0 0 0x16C50 "" "C390"  
+sampPatch[] = "NOP SetNumberPlate"     &0 0 0x16D10 "" "C390"  
+sampPatch[] = "NOP TogglePlayerSpectating"     &0 0 0x16E30 "" "C390"  
+sampPatch[] = "NOP PlayerSpectatePlayer"     &0 0 0x16EE0 "" "C390"  
+sampPatch[] = "NOP PlayerSpectateVehicle"     &0 0 0x16FC0 "" "C390"  
+sampPatch[] = "NOP RequestClass"     &0 0 0xC0A0 "" "C390"  
+sampPatch[] = "NOP RequestSpawn"     &0 0 0xC170 "" "C390"  
+sampPatch[] = "NOP SetPlayerWantedLevel"     &0 0 0x17760 "" "C390"  
+sampPatch[] = "NOP ShowTextDraw"     &0 0 0x17800 "" "C390"  
+sampPatch[] = "NOP TextDrawHideForPlayer"     &0 0 0x17930 "" "C390"  
+sampPatch[] = "NOP RemovePlayerMapIcon"     &0 0 0x15470 "" "C390"  
+sampPatch[] = "NOP SetPlayerAmmo"     &0 0 0x157D0 "" "C390"  
+sampPatch[] = "NOP SetGravity"     &0 0 0x15890 "" "C390"  
+sampPatch[] = "NOP SetVehicleHealth"     &0 0 0x15930 "" "C390"  
+sampPatch[] = "NOP AttachTrailerToVehicle"     &0 0 0x15A10 "" "C390"  
+sampPatch[] = "NOP DetachTrailerFromVehicle"     &0 0 0x15B50 "" "C390"  
+sampPatch[] = "NOP SetWeather"     &0 0 0xB440 "" "C390"  
+sampPatch[] = "NOP SetPlayerSkin"     &0 0 0x13DD0 "" "C390"  
+sampPatch[] = "NOP SetPlayerInterior"     &0 0 0x145D0 "" "C390"  
+sampPatch[] = "NOP SetPlayerCameraPos"     &0 0 0x14670 "" "C390"  
+sampPatch[] = "NOP SetPlayerCameraLookAt"     &0 0 0x14740 "" "C390"  
+sampPatch[] = "NOP SetVehiclePos"     &0 0 0x14840 "" "C390"  
+sampPatch[] = "NOP SetVehicleZAngle"     &0 0 0x14950 "" "C390"  
+sampPatch[] = "NOP SetVehicleParamsForPlayer"     &0 0 0x14A20 "" "C390"  
+sampPatch[] = "NOP SetCameraBehindPlayer"     &0 0 0x12D40 "" "C390"  
+sampPatch[] = "NOP WorldPlayerRemove"     &0 0 0xCEC0 "" "C390"  
+sampPatch[] = "NOP WorldVehicleAdd"     &0 0 0xA9F0 "" "C390"  
+sampPatch[] = "NOP WorldVehicleRemove"     &0 0 0xCFA0 "" "C390"  
+sampPatch[] = "NOP WorldPlayerDeath"     &0 0 0xCE00 "" "C390"  
 
 # ====================
 # Ingame samp commands
