Optimized Admin Checker, added a disconnect notify TODO: Struct SAMP MISC INFO

--- a/bin/mod_sa/mod_sa.ini
+++ b/bin/mod_sa/mod_sa.ini
@@ -31,6 +31,7 @@
 # mod_sa (full updated for 0.3z-R2 by povargek)
 # by jflm, nuckfuts, notaplane, FYP, Pushok, iMaddy, povargek and the game modification community
 # http://code.google.com/p/mod-s0beit-sa/
+# http://code.google.com/p/m0d-s0beit-sa-03z/
 # 
 # 
 # Credits & Greets:
@@ -1539,31 +1540,38 @@ use_current_name = true
 # Format: server[] = "NICKNAME" "SERVER NAME" "IP ADDRESS" "PORT" "PASSWORD"
 # Max is 64.
 #
-server[] = "Player" "Samp-Rp.Ru | Server: 01" "5.254.105.74" "7701" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 02" "5.254.105.74" "7702" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 03" "5.254.105.74" "7703" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 04" "188.127.238.146" "7704" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 05" "188.127.238.146" "7705" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 06" "188.127.238.146" "7706" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 07" "188.127.238.147" "7707" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 08" "188.127.238.148" "7708" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 09" "188.127.238.148" "7709" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 10" "188.127.238.148" "7710" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 11" "188.127.238.148" "7711" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 12" "188.127.238.148" "7712" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 13" "188.127.238.148" "7713" ""
-server[] = "Player" "Samp-Rp.Ru | Server: 14" "188.127.238.148" "7714" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 01" "5.254.105.122" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 02" "5.254.105.123" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 03" "5.254.105.124" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 04" "5.254.104.114" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 05" "5.254.104.115" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 06" "5.254.104.116" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 07" "5.254.104.117" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 08" "5.254.104.118" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 09" "5.254.104.119" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 10" "5.254.104.120" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 11" "5.254.104.121" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 12" "5.254.104.122" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 13" "5.254.104.123" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 14" "5.254.104.124" "7777" ""
+server[] = "Player" "Samp-Rp.Ru | Server: 15" "5.254.104.125" "7777" ""
 server[] = "Player" "Advance RolePlay 1 | Red Server" "188.127.238.25" "7771" ""
 server[] = "Player" "Advance RolePlay 2 | Green Server" "188.127.238.25" "7772" ""
 server[] = "Player" "Advance RolePlay 3 | Yellow Server" "188.127.238.25" "7773" ""
 server[] = "Player" "Advance RolePlay 4 | Orange Server" "188.127.238.25" "7774" ""
 server[] = "Player" "Advance RolePlay 5 | Blue Server" "188.127.238.25" "7775" ""
 server[] = "Player" "Advance RolePlay 6 | White Server" "188.127.238.57" "7776" ""
-server[] = "Player" "Advance RolePlay 7 | Silver Server" "188.127.238.57" "7778" ""
-server[] = "Player" "Advance RolePlay 8 | Purple Server" "188.127.238.57" "7779" ""
+server[] = "Player" "Advance RolePlay 7 | Silver Server" "188.127.238.57" "7777" ""
+server[] = "Player" "Advance RolePlay 8 | Purple Server" "188.127.238.57" "7778" ""
+server[] = "Player" "Advance RolePlay 9 | Chocolate Server" "188.127.238.57" "7779" ""
+server[] = "Player" "Diamond Role Play | Emerald" "188.127.238.129" "7777" ""
+server[] = "Player" "Diamond Role Play | Radiant" "188.127.238.129" "7776" ""
+server[] = "Player" "Diamond Role Play | Trilliant" "188.127.238.129" "7775" ""
+server[] = "Player" "Diamond Role Play | Crystal" "188.127.238.153" "7774" ""
+server[] = "Player" "Diamond Role Play | Sapphire" "188.127.238.153" "7773" ""
 server[] = "Player" "PROCHEAT: STONED FreeRoam server"								"212.187.99.221"	"8888" ""
 server[] = "Player" "PROCHEAT: S0beit maniacs"										"188.64.45.242"		"7777" ""
-server[] = "Player" "PROCHEAT: Cheating ALLOWED"									"88.198.32.248"		"7778" ""
+server[] = "Player" "PROCHEAT: Cheating ALLOWED"									"samp.adihash.net"		"7778" ""
 server[] = "Player" "LOCAL: LocalHost (127.0.0.1:7777)"								"127.0.0.1"			"7777" ""
 
 
@@ -1615,3 +1623,4 @@ i_have_edited_the_ini_file = true
 
 # the end
 # http://code.google.com/p/mod-s0beit-sa/
+# http://code.google.com/p/m0d-s0beit-sa-03z/
